[gd_scene load_steps=9 format=2]

[ext_resource path="res://terrain/mat_terrain_grass_grid.tres" type="Material" id=1]
[ext_resource path="res://scenes/SceneDefaultEnvironment.tres" type="Environment" id=2]
[ext_resource path="res://tests/CubitDriverTest.gd" type="Script" id=3]
[ext_resource path="res://tests/test_assets/Cubit.tscn" type="PackedScene" id=4]

[sub_resource type="PlaneMesh" id=1]
material = ExtResource( 1 )
size = Vector2( 15, 15 )

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( 7.5, 0, 7.5, -7.5, 0, 7.5, 7.5, 0, -7.5, -7.5, 0, 7.5, -7.5, 0, -7.5, 7.5, 0, -7.5 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.917647, 0.309804, 0.211765, 1 )

[sub_resource type="CubeMesh" id=4]
material = SubResource( 3 )
size = Vector3( 0.5, 0.5, 0.5 )

[node name="CubitDriverTest" type="Spatial"]
script = ExtResource( 3 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.707107, -0.408244, 0.577353, 0, 0.8165, 0.577345, -0.707107, -0.408244, 0.577353, 64, 64, 64 )
projection = 1
size = 15.0
far = 130.0

[node name="Cubit" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="WorldEnvironment"]
transform = Transform( 0.188992, -0.694364, 0.694364, 0, 0.707107, 0.707107, -0.981979, -0.133638, 0.133638, 0, 5.5, 0 )
shadow_enabled = true
shadow_contact = 0.4
directional_shadow_normal_bias = 0.1

[node name="Floor" type="MeshInstance" parent="."]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Floor"]

[node name="CollisionShape" type="CollisionShape" parent="Floor/StaticBody"]
shape = SubResource( 2 )

[node name="Targets" type="Spatial" parent="."]

[node name="Target01" type="MeshInstance" parent="Targets"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.19209e-07, 0, 9 )
mesh = SubResource( 4 )
material/0 = null

[node name="Target02" type="MeshInstance" parent="Targets"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.19209e-07, 0, -9 )
mesh = SubResource( 4 )
material/0 = null

[node name="Target03" type="MeshInstance" parent="Targets"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9, 0, -9.53674e-07 )
mesh = SubResource( 4 )
material/0 = null

[node name="Target04" type="MeshInstance" parent="Targets"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 0, -9.53674e-07 )
mesh = SubResource( 4 )
material/0 = null

[node name="Target05" type="MeshInstance" parent="Targets"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -9.53674e-07 )
mesh = SubResource( 4 )
material/0 = null

[node name="Target06" type="MeshInstance" parent="Targets"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 3 )
mesh = SubResource( 4 )
material/0 = null

[node name="Target07" type="MeshInstance" parent="Targets"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 3 )
mesh = SubResource( 4 )
material/0 = null

[node name="Target08" type="MeshInstance" parent="Targets"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, -3 )
mesh = SubResource( 4 )
material/0 = null

[node name="Target09" type="MeshInstance" parent="Targets"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, -3 )
mesh = SubResource( 4 )
material/0 = null

[node name="Items" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -42.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestLabel" type="VBoxContainer" parent="Items"]
margin_right = 248.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Items/TestLabel"]
margin_right = 248.0
margin_bottom = 14.0
text = "Test Index:"
align = 1

[node name="Info" type="Label" parent="Items/TestLabel"]
margin_top = 18.0
margin_right = 248.0
margin_bottom = 32.0
text = "1"
align = 1

[node name="TargetLabel" type="VBoxContainer" parent="Items"]
margin_left = 252.0
margin_right = 500.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Items/TargetLabel"]
margin_right = 248.0
margin_bottom = 14.0
text = "Target:"
align = 1

[node name="Info" type="Label" parent="Items/TargetLabel"]
margin_top = 18.0
margin_right = 248.0
margin_bottom = 32.0
text = "(0, 0, 0)"
align = 1

[node name="PositionLabel" type="VBoxContainer" parent="Items"]
margin_left = 504.0
margin_right = 752.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Items/PositionLabel"]
margin_right = 248.0
margin_bottom = 14.0
text = "Position:"
align = 1

[node name="Info" type="Label" parent="Items/PositionLabel"]
margin_top = 18.0
margin_right = 248.0
margin_bottom = 32.0
text = "(0, 0, 0)"
align = 1

[node name="DistanceLabel" type="VBoxContainer" parent="Items"]
margin_left = 756.0
margin_right = 1004.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Items/DistanceLabel"]
margin_right = 248.0
margin_bottom = 14.0
text = "Distance:"
align = 1

[node name="Info" type="Label" parent="Items/DistanceLabel"]
margin_top = 18.0
margin_right = 248.0
margin_bottom = 32.0
text = "1"
align = 1
[connection signal="path_complete" from="Cubit/KinematicDriverMachine" to="." method="_on_KinematicDriverMachine_path_complete"]

[editable path="Cubit"]
